--- a/6.basicProject/Homepage/homepage/src/views/mainpage.module.css
+++ b/6.basicProject/Homepage/homepage/src/views/mainpage.module.css
@@ -39,3 +39,12 @@
 .titleItem {
     flex-basis: 50%
 }
+
+.itemsPanel {
+    display: flex;
+    flex-direction: column;
+}
+.sectionTitle {
+    align-self: center;
+    border-bottom: 1px blue solid;
+}
