--- a/6.basicProject/Homepage/homepage/src/layout/style.css
+++ b/6.basicProject/Homepage/homepage/src/layout/style.css
@@ -14,11 +14,11 @@
 
 .header {
     /* max-width: 1350px; */
-    margin: auto;
+    /* margin: auto; */
     width: 100%;
     display: flex;
     flex-direction: row;
-    height: 8vh;
+    height: 5vh;
     align-items: center;
     justify-content: space-between;
     border-bottom-color: rgb(239, 239, 242);
@@ -72,10 +72,8 @@
 }
 
 .main {
-
     display: flex;
     flex-grow: 1;
-
 }
 
 .footer {
